[tool.poetry]
name = "cipher_sun_xiaoqi"
version = "0.1.0"
description = ""
authors = ["Xiaoqi SUN <xs2416@columbia.edu>"]

[tool.poetry.dependencies]
python = "^3.9.0"
pandas = "^1.3.4"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
