[tool.poetry]
name = "cipher_sun_xiaoqi"
version = "0.1.0"
description = ""
authors = ["Xiaoqi SUN <xs2416@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
jupyter = "^1.0.0"
notebook = "^6.4.5"

[tool.poetry.dev-dependencies]
pandas = "^1.3.4"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
