[tool.poetry]
name = "cipher_xs2416"
version = "0.1.0"
description = "Xiaoqi's cipher package for homework 07."
authors = ["Xiaoqi Sun"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
